fix wrapping of text

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -662,6 +662,8 @@
         border-left: none;
         padding-left: 0;
         margin-bottom: var(--a-spacing-3);
+        max-width: 470px;
+        width: unset;
     }
 
     .previewSection {
